# peek

./: .gitignore  .travis.yml  AUTHORS  BUILD_NOTES.md  CHANGES  CHANGES.md  CMakeLists.txt  CNAME  README.md  cmake_uninstall.cmake.in  de.uploadedlobster.peek.gschema.xml  flatpak.json  gifcast.gresource.xml  index.html  meson.build  meson_options.txt  params.json  peek.desktop  peek.gresource.xml  snapcraft.yaml  sync-translations.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.tx/: config
assets/: CMakeLists.txt
build-aux/appimage/: launch-peek
build-aux/flatpak/: build.sh  flatpak-master.yml  flatpak-stable.yml  peek-master.flatpakref  peek-stable.flatpakref  pull-aws.sh
build-aux/meson/: postinstall.py
build-aux/snap/: snapcraft.yaml
cmake/: FindVala.cmake  GResource.cmake  GSettings.cmake  GettextTranslate.cmake  UseVala.cmake  package.txt
data/: CMakeLists.txt  com.canonical.Unity.gschema.xml  com.uploadedlobster.peek.appdata.xml.in  com.uploadedlobster.peek.desktop.in  com.uploadedlobster.peek.gschema.xml  com.uploadedlobster.peek.service.in  meson.build
data/appimage/: appimage.yml  launch-peek
data/dbus/: com.uploadedlobster.peek.service  com.uploadedlobster.peek.service.in
data/desktop/: com.uploadedlobster.peek.desktop.in
data/flatpak/: .gitignore  build.sh  com.uploadedlobster.peek.desktop.in.patch  flatpak-master.json  flatpak-master.yml  flatpak-stable.json  flatpak-stable.yml  launch-command.patch  launch-peek  peek-master.flatpakref  peek-stable.flatpakref  sync-aws.sh
data/icons/: meson.build
data/man/: CMakeLists.txt  build_man.sh  meson.build  peek.1.txt
data/schemas/: com.uploadedlobster.peek.gschema.xml
data/snapcraft/: com.canonical.Unity.gschema.xml  launch-peek
debian/: changelog  control  copyright  lintian-overrides  rules
po/: CMakeLists.txt  LINGUAS  Makevars  POTFILES.in  ar.po  bg.po  bn.po  ca.po  cs.po  de.po  el.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  lt.po  meson.build  ml.po  mr.po  nap.po  nb.po  nl.po  peek.pot  pl.po  pt.po  pt_BR.po  pt_PT.po  ru.po  si.po  sk.po  (+10 more)
rpm/: peek.spec
schemas/: com.uploadedlobster.peek.gschema.xml  de.uploadedlobster.peek.gschema.xml
src/: about-dialog.vala  application-window.vala  application.vala  defaults.vala  desktop-integration.vala  errordomain.vala  gifcast.vala  gtk-helper.vala  main.vala  meson.build  peek-about-dialog.vala  peek-application-window.vala  peek-application.vala  peek-preferences-dialog.vala  preferences-dialog.vala  screen-recorder.vala  screen_recorder.vala  utils.vala
src/dbus/: README.md  freedesktop-dbus.vala  freedesktop-filemanager.vala  freedesktop.vala  generate.sh  gnome-shell-screencast.vala  gnome-shell.vala  org.freedesktop.DBus.xml  org.freedesktop.FileManager1.xml  org.gnome.Shell.Screencast.xml  org.gnome.Shell.xml
src/post-processing/: cli-post-processor.vala  extract-frames-post-processor.vala  ffmpeg-gif-post-processor.vala  ffmpeg-post-processor.vala  gifski-post-processor.vala  imagemagick-post-processor.vala  post-processing-pipeline.vala  post-processor.vala
src/recording/: avconv-screen-recorder.vala  base-screen-recorder.vala  cli-screen-recorder.vala  command-line-screen-recorder.vala  ffmpeg-screen-recorder.vala  ffmpeg.vala  gnome-shell-dbus-recorder.vala  recording-area.vala  recording-config.vala  screen-recorder-factory.vala  screen-recorder.vala  sway-screen-recorder.vala
src/screen-recorder/: abstract-command-screen-recorder.vala  avconv-screen-recorder.vala  command-line-screen-recorder.vala  ffmpeg-screen-recorder.vala  recording-area.vala  screen-recorder.vala
src/ui/: about-dialog.vala  application-window.ui  application-window.vala  error-dialog.vala  preferences-dialog.vala  set-window-size-dialog.vala  share-dialog.ui  share-dialog.vala  shortcut-label.vala
src/vapi/: config.vapi  keybinder-3.0.vapi
stylesheets/: github-light.css
tests/: CMakeLists.txt  meson.build  test-desktop-integration.vala  test-utils.vala
tests/screen-recorder/: test-cli-screen-recorder.vala  test-command-line-screen-recorder.vala  test-recording-area.vala
tools/: print-description.py
ui/: about.ui  about.ui.in  application-window.ui  application-window.vala  error-dialog.ui  gifcast.glade  gifcast.ui  peek.gresource.xml  peek.ui  preferences.ui  set-window-size-dialog.ui  share-dialog.ui
ui/css/: ambiance.css  breeze-dark.css  breeze.css  peek.css  unity.css
ui/gtk/: menus.ui
