system_icons_dir = join_paths(get_option('datadir'), 'icons', 'hicolor')

install_data('com.uploadedlobster.peek.svg',
  install_dir: join_paths(system_icons_dir, 'scalable', 'apps'))
install_data('com.uploadedlobster.peek-symbolic.svg',
  install_dir: join_paths(system_icons_dir, 'symbolic', 'apps'))
